# sicp-exercises

./: .gitignore  2.52.scm  4.17.txt  README.md  build-es5.51.sh  chapter4.1.scm  chapter5.1.txt  chapter5.2.scm  chapter5.2.txt  chapter5.4.scm  chapter5.4.stack.scm  chapter5.5-example.scm  chapter5.5.scm  chapter5.scm  es.4.46.txt  es1.1.txt  es1.10.scm  es1.11.scm  es1.11a.scm  es1.12.scm  es1.14.txt  es1.15.scm  es1.16.scm  es1.16.txt  es1.17.scm  es1.18.scm  es1.18.txt  es1.19.scm  es1.19.txt  es1.2.scm  es1.20.txt  es1.21.scm  es1.22.scm  es1.23.scm  es1.24.scm  es1.25.txt  es1.26.txt  es1.27.scm  es1.28.scm  es1.29.scm  (+341 more)
es5.51/: Assign.cpp  Bool.cpp  Branch.cpp  CMakeLists.txt  Cons.cpp  Environment.cpp  Goto.cpp  InitializeStack.cpp  Instruction.cpp  IsSelfEvaluating.cpp  IsVariable.cpp  Label.cpp  LabelNoop.cpp  Machine.cpp  MachineFeedback.cpp  Nil.cpp  Operation.cpp  Perform.cpp  PromptForInput.cpp  README.md  Read.cpp  Register.cpp  SchemeInteger.cpp  Stack.ccp  String.cpp  Symbol.cpp  TODO.txt  Test.cpp  assign.h  bool.h  branch.h  build.sh  cons.h  data_structures.h  environment.h  frame.h  get_global_environment.h  goto.h  initialize_stack.h  instruction.h  (+18 more)
es5.51/src/: AdjoinArg.cpp  AnnounceOutput.cpp  ApplyPrimitiveProcedure.cpp  Assign.cpp  Bool.cpp  Branch.cpp  Cons.cpp  ConsMethodOperation.cpp  Constant.cpp  DefineVariable.cpp  DefinitionValue.cpp  DefinitionVariable.cpp  Environment.cpp  ExtendEnvironment.cpp  Float.cpp  Frame.cpp  GetGlobalEnvironment.cpp  Goto.cpp  InitializeStack.cpp  Instruction.cpp  Integer.cpp  IsEqualTo.cpp  IsLastExp.cpp  (+91 more)
(+224 files in other folders)
